# sanctum-engine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.es.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: superstep_overhead.py
docs/: api.md  architecture.md  comparison.md  getting-started.md  index.md
docs/concepts/: aether.md  codex.md  omens.md  oracles.md  policies.md  ritual.md  sigils-and-edges.md  spells.md  wards.md
docs/es/: index.md
docs/guides/: human-in-the-loop.md  robust-tool-calling.md  time-travel.md  tracing.md
examples/: quickstart_ollama.py  sse_flask.py
examples/human_in_the_loop/: main.py
examples/research_ritual/: main.py
examples/resilient_pipeline/: main.py
landing/: index.es.html  index.html
src/sanctum/: __init__.py  trace.py
src/sanctum/aether/: __init__.py  core.py  errors.py  reducers.py
src/sanctum/codex/: __init__.py  core.py  errors.py  memory.py  postgres.py  sqlite.py
src/sanctum/grimoire/: __init__.py  core.py  errors.py  repair.py  summon.py
src/sanctum/omens/: __init__.py  events.py  tracing.py
src/sanctum/oracle/: __init__.py  _shared.py  core.py  errors.py  llamacpp.py  ollama.py  openai_compat.py  robust.py  scripted.py  transformers.py
src/sanctum/ritual/: __init__.py  circle.py  constants.py  core.py  errors.py  interrupt.py  policies.py  scatter.py  scheduler.py
src/sanctum/wards/: __init__.py  audit.py  core.py  errors.py  redact.py  usage.py
tests/: test_sanctum.py
tests/aether/: test_reducers.py
tests/codex/: test_codex.py
tests/fixtures/: ollama_chat_tools.json  ollama_stream.ndjson  openai_chat_completion_malformed_tool.json  openai_chat_completion_text.json  openai_chat_completion_tools.json  openai_stream.sse  openai_stream_tools.sse
tests/grimoire/: test_robust.py  test_summon.py  test_tome.py
tests/grimoire/fixtures/agentgrimoire/system/shout/: spell.json  spell.py
tests/grimoire/fixtures/agentgrimoire/text/word_count/: spell.json  spell.py
tests/omens/: test_astream.py  test_tracing.py
tests/oracle/: test_integration_ollama.py  test_integration_openai_compat.py  test_llamacpp.py  test_ollama.py  test_openai_compat.py  test_scripted.py
tests/ritual/: test_circle.py  test_conditional.py  test_core.py  test_join.py  test_policies.py  test_scatter.py  test_scheduler.py  test_validation.py
tests/wards/: test_wards.py
