[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sanctum-engine"
version = "0.2.0"
description = "A minimal, local-first orchestration engine for AI agents: cyclic state graphs executed by supersteps (Pregel/BSP)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Zabdiel Quintero" }]
keywords = [
    "agents",
    "orchestration",
    "state-graph",
    "pregel",
    "llm",
    "local-first",
    "ollama",
    "llama-cpp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
# Non-negotiable principle #1: the core has zero external dependencies.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",  # unit tests replay recorded fixtures via MockTransport
    "ruff>=0.4",
]
openai-compat = [
    "httpx>=0.27",
]
ollama = [
    "httpx>=0.27",
]
llamacpp = [
    "llama-cpp-python>=0.3",
]
postgres = [
    "psycopg>=3.1",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]
transformers = [
    "transformers>=4.40",
]
# `all` deliberately EXCLUDES llama-cpp-python: it compiles llama.cpp and
# needs a C toolchain or a matching prebuilt wheel, which breaks
# "pip install sanctum-engine[all]" on clean machines. Install the
# in-process backend explicitly with the [llamacpp] extra.
all = [
    "httpx>=0.27",
    "psycopg>=3.1",
    "transformers>=4.40",
]

[project.urls]
Repository = "https://github.com/zquintero246/sanctum-engine"
Documentation = "https://github.com/zquintero246/sanctum-engine/blob/main/docs/architecture.md"
Changelog = "https://github.com/zquintero246/sanctum-engine/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/sanctum"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "integration: opt-in tests against a live local model server (see CONTRIBUTING.md)",
]

[tool.coverage.run]
# Adapters that require loading real models or a live service are
# validated manually, never by the test suite (tests never touch real
# models — see CONTRIBUTING.md), and excluded from core coverage. The
# HTTP adapters (openai_compat, ollama) are NOT excluded: their unit
# tests replay recorded fixtures through httpx.MockTransport.
omit = [
    "*/sanctum/oracle/llamacpp.py",
    "*/sanctum/oracle/transformers.py",
    "*/sanctum/codex/postgres.py",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
